Selenium_TTA1 second Commit

--- a/readme
+++ b/readme
@@ -1,6 +1,9 @@
 Testing WebSites :
 https://www.w3.org/TR/webdriver2/
 https://www.selenium.dev/documentation/en/webdriver/
+https://trytestingthis.netlify.app/ -- All the elements are present in this website
+https://jqueryui.com/droppable/
+
 
 Dependencies and its Uses:
 1. Selenium Java
